lustre/mdt/mdt_recovery.c
@@ -157,12 +157,13 @@ static void mdt_steal_ack_locks(struct ptlrpc_request *req)
 		       oldrep->rs_xid, oldrep->rs_transno, oldrep->rs_opc,
 		       libcfs_nid2str(exp->exp_connection->c_peer.nid));
 
-                for (i = 0; i < oldrep->rs_nlocks; i++)
-                        ptlrpc_save_lock(req, &oldrep->rs_locks[i],
-                                         oldrep->rs_modes[i], 0);
-                oldrep->rs_nlocks = 0;
+		for (i = 0; i < oldrep->rs_nlocks; i++)
+			ptlrpc_save_lock(req, &oldrep->rs_locks[i],
+					 oldrep->rs_modes[i], oldrep->rs_no_ack,
+					 oldrep->rs_convert_lock);
+		oldrep->rs_nlocks = 0;
 
-                DEBUG_REQ(D_HA, req, "stole locks for");
+		DEBUG_REQ(D_HA, req, "stole locks for");
 		spin_lock(&oldrep->rs_lock);
 		ptlrpc_schedule_difficult_reply(oldrep);
 		spin_unlock(&oldrep->rs_lock);
